Implement Converter for Feedback and Deterministic automata and add tests